fixed horizontal overflow

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -151,10 +151,10 @@ a:hover, a:visited, a:link, a:active {
 
 /*Home Page Styling*/
 
-#home {
+#homepage {
 	overflow-x: hidden;
 	/*overflow-y: hidden;*/
-	position: relative;
+
 }
 .thumbs {
 	height: 100px;
